# fullstack-llm-agent-platform

./: .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.frontend.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/app/: __init__.py  admin.py  main.py
backend/app/agents/: __init__.py  langgraph_assistant.py
backend/app/agents/tools/: __init__.py  rag_tool.py
backend/app/api/: deps.py
backend/app/api/routes/v1/: __init__.py  admin_conversations.py  admin_ratings.py  agent.py  auth.py  channels.py  conversations.py  files.py  health.py  rag.py  sessions.py  telegram_webhook.py  users.py
backend/app/channels/: __init__.py  base.py  router.py  telegram.py
backend/app/commands/: channel.py  cleanup.py  rag.py  seed.py
backend/app/core/: channel_crypto.py  config.py  csrf.py  logfire_setup.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/db/models/: __init__.py  channel_bot.py  channel_identity.py  channel_session.py  chat_file.py  conversation.py  conversation_share.py  message_rating.py  rag_document.py  session.py  sync_log.py  sync_source.py  user.py
backend/app/rag/: config.py  documents.py  embeddings.py  ingestion.py  models.py  reranker.py  retrieval.py  vectorstore.py
backend/app/rag/connectors/: __init__.py  google_drive.py
backend/app/rag/sources/: __init__.py  base.py  google_drive.py
backend/app/repositories/: __init__.py  channel_bot.py  channel_identity.py  channel_session.py  chat_file.py  conversation.py  conversation_share.py  message_rating.py  rag_document.py  session.py  sync_log.py  sync_source.py  user.py
backend/app/schemas/: __init__.py  channel_bot.py  conversation.py  conversation_share.py  file.py  message_rating.py  rag.py  session.py  sync_source.py  user.py
backend/app/services/: __init__.py  agent_invocation.py  channel_bot.py  conversation.py  conversation_share.py  file_upload.py  message_rating.py  rag_document.py  rag_sync.py  session.py  sync_source.py  user.py
backend/cli/: commands.py
backend/tests/: conftest.py  test_admin.py  test_core.py  test_migrations.py  test_repositories.py  test_services.py  test_services_conversation.py
backend/tests/api/: test_auth.py  test_exceptions.py  test_health.py  test_openapi.py  test_users.py
docs/: adding_features.md  architecture.md  commands.md  configuration.md  file-processing.md  patterns.md  permissions.md
docs/howto/: add-agent-tool.md  add-api-endpoint.md  add-background-task.md  add-rag-source.md  add-sync-connector.md  configure-sync-sources.md  customize-agent-prompt.md
frontend/: .env.example  instrumentation.ts  next.config.ts  package.json  vitest.config.ts
frontend/e2e/: chat.spec.ts  home.spec.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx
frontend/src/app/[locale]/: error.tsx  page.tsx
frontend/src/app/[locale]/(auth)/: layout.tsx
frontend/src/app/[locale]/(dashboard)/: layout.tsx
frontend/src/app/[locale]/(dashboard)/admin/conversations/: page.tsx
frontend/src/app/[locale]/(dashboard)/admin/ratings/: page.tsx
frontend/src/app/[locale]/(dashboard)/dashboard/: page.tsx
frontend/src/app/[locale]/(dashboard)/profile/: page.tsx
frontend/src/app/[locale]/(dashboard)/rag/: page.tsx
frontend/src/app/[locale]/(dashboard)/settings/: page.tsx
frontend/src/app/[locale]/shared/[token]/: page.tsx
frontend/src/app/api/files/[id]/: route.ts
frontend/src/app/api/files/upload/: route.ts
frontend/src/app/api/v1/admin/ratings/: route.ts
frontend/src/components/auth/: login-form.tsx  register-form.tsx
frontend/src/components/chat/: chat-container.tsx  conversation-sidebar.tsx  message-item.tsx  rating-buttons.tsx  share-dialog.tsx
frontend/src/components/layout/: auth-guard.tsx  breadcrumb.tsx  header.tsx  landing-nav.tsx  sidebar.tsx
frontend/src/components/ui/: button.test.tsx
frontend/src/hooks/: index.ts  use-admin-conversations.ts  use-chat.ts  use-conversation-shares.ts  use-conversations.ts
frontend/src/lib/: admin-auth.ts  constants.ts
frontend/src/stores/: index.ts
frontend/src/types/: auth.ts  chat.ts  conversation.ts  index.ts
(+5 files in other folders)
